--- a/app/src/main/res/layout/layout_member_view.xml
+++ b/app/src/main/res/layout/layout_member_view.xml
@@ -36,6 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
 
 </RelativeLayout>
